[package]
name = "lox-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ilox"
path = "src/interpreter/main.rs"
test = true
bench = false

[[bin]]
name = "blox"
path = "src/bytecode/main.rs"
test = true
bench = false

[dependencies]
anyhow = "1.0.45"
thiserror = "1.0.30"
dyn-clone = "1.0.4"
structopt = "0.3"
strum = { version = "0.23", features = ["derive"] }
